--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="home-content">
             <h1>Hi it's <span>GGS</span></h1>
-            <h3 class="Typing-test">I'm a <span></span></h3>
+            <h3 class="Typing-test">Cambodia is clever <span></span></h3>
             <p>Theoun Punlork created GGS CAMBO and make been since 2020</p>
             <div class="social-icons">
                 <a href="https://www.facebook.com/punlorkkhan" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
